@@ -1,2 +1,0 @@
-/usr/lib/interchange/standard
-/usr/lib/interchange/usertag/standard
