@@ -1,3 +1,3 @@
 usr/lib/interchange/code/UI_Tag
 usr/lib/interchange/lib/UI
-var/www/interchange-5/
+var/www/interchange-5
