@@ -4,8 +4,9 @@ interchange (5.5.1-0.1) unstable; urgency=low
   * removed db_stop call from interchange-ui's postrm script
     (Closes: #431580, thanks to Michael Ablassmeier <abi@grinser.de> for the
     report)
+  * switched from dh_movefiles to dh_install
   
- -- Stefan Hornburg (Racke) <racke@linuxia.de>  Fri,  6 Jul 2007 12:12:12 +0200
+ -- Stefan Hornburg (Racke) <racke@linuxia.de>  Mon,  6 Aug 2007 21:46:12 +0200
 
 interchange (5.4.2-4) unstable; urgency=low
 
