@@ -173,3 +173,8 @@ SOAP
 ----
 
 * Return proper SOAP error to the client instead of disclosing our faults.
+
+Packaging
+---------
+
+* Switched from dh_movefiles to dh_install for Debian packaging.
